# hushh-research

./: .dockerignore  .env.example  .env.local-uatdb.local.example  .env.prod-remote.local.example  .env.uat-remote.local.example  .gcloudignore  .gitignore  .gitleaks.toml  .gitleaksignore  CODE_OF_CONDUCT.md  COMPLIANCE_PROGRESS.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  NOTICE  README.md  REUSE.toml  SECURITY.md  TESTING.md  THIRD_PARTY_NOTICES.md  claude_desktop_config.example.json  consent_db.py  contributing.md  getting_started.md  mcp_remote.py  mcp_server.py  package.json  pyproject.toml  readme.md  requirements-dev.txt  requirements.txt  server.py  server_a2a.py  setup_mcp.py
consent-protocol/: .env.example  .env.local-uatdb.local.example  .env.prod-remote.local.example  .env.uat-remote.local.example  CONTRIBUTING.md  LICENSE  Makefile  NOTICE  README.md  THIRD_PARTY_NOTICES.md  pyproject.toml  requirements-dev.txt  requirements.txt  server.py
consent-protocol/.github/workflows/: ci.yml
consent-protocol/api/: consent_listener.py  middleware.py
consent-protocol/api/middlewares/: observability.py
consent-protocol/api/models/: schemas.py
consent-protocol/api/routes/: agents.py  consent.py  db_proxy.py  developer.py  health.py  iam.py  invites.py  marketplace.py  pkm.py  pkm_routes_shared.py  ria.py  session.py  tickers.py  world_model.py
consent-protocol/api/utils/: consent_notifications.py  fcm_messages.py  firebase_admin.py
consent-protocol/db/: connection.py  db_client.py  migrate.py  release_migration_manifest.json
consent-protocol/db/contracts/: prod_core_schema.json  uat_integrated_schema.json
consent-protocol/db/legacy/: init_supabase_schema.sql
consent-protocol/db/migrations/: 015_vault_multi_wrapper.sql  018_vault_wrapper_sets.sql  028_professional_regulatory_capabilities.sql  030_pkm_cutover.sql  033_atomic_pkm_storage_rename.sql  037_actor_identity_cache.sql  039_kai_gmail_watch_history_sync.sql  040_kai_receipt_memory_artifacts.sql  045_kai_funding_trade_intents.sql
consent-protocol/db/repair/: add_onboarding_column.py
consent-protocol/db/schema_contract/: prod_core_schema.json  uat_integrated_schema.json
consent-protocol/db/seeds/: seed_investors.py
consent-protocol/db/verify/: verify_consent_audit_schema.py  verify_iam_schema.py  verify_vault_schema.py
consent-protocol/docs/: README.md  mcp-setup.md
consent-protocol/docs/reference/: README.md  agent-development.md  backend-semantic-baseline-audit.md  backend-semantic-boundary.md  consent-protocol.md  env-vars.md  fcm-notifications.md  kai-agents.md  pkm-agent-north-star.md  pkm-prompt-contract.md  pkm-structure-agent-live-eval.md
consent-protocol/hushh_mcp/: __init__.py  config.py  constants.py  runtime_settings.py  types.py
consent-protocol/hushh_mcp/consent/: scope_generator.py  scope_helpers.py  token.py
consent-protocol/hushh_mcp/hushh_adk/: tools.py
consent-protocol/hushh_mcp/services/: account_service.py  actor_identity_service.py  attribute_learner.py  broker_funding_service.py  chat_db_service.py  consent_center_service.py  consent_db.py  consent_request_links.py  developer_registry_service.py  domain_contracts.py  domain_registry_service.py  gmail_receipts_service.py  kai_chat_service.py  kai_invite_email_service.py  market_cache_store.py  market_insights_cache.py  personal_knowledge_model_service.py  pkm_agent_lab_service.py  plaid_portfolio_service.py  portfolio_import_service.py  receipt_memory_service.py  renaissance_service.py  ria_iam_service.py  ria_verification.py  support_email_service.py  vault_db.py  vault_keys_service.py  voice_intent_service.py  world_model_service.py
consent-protocol/hushh_mcp/tools/: hushh_tools.py
consent-protocol/hushh_mcp/trust/: link.py
consent-protocol/mcp_modules/: config.py  developer_context.py  resources.py
consent-protocol/mcp_modules/tools/: consent_tools.py  data_tools.py  definitions.py  ria_read_tools.py  utility_tools.py
consent-protocol/scripts/: README.md  backfill_actor_identity_cache.py  cleanup_user_consent_surface.py  eval_pkm_structure_agent.py  eval_portfolio_stream_quality.py  fix_partial_vault_rows.py  init_supabase_schema.sql  local_pkm_core_path_smoke.py  local_sync_email_reviewer_from_kai_user.py  migrate_financial_v2.py  normalize_user_data_format.py  reset_dev_user_data.py  reset_finance_root_user.py  run-test-ci.sh  setup_kai_test_marketplace_profiles.py  sync_runtime_requirements.sh  uat_kai_regression_smoke.py  verify_vault_schema.py
consent-protocol/scripts/ci/: backend-check.sh  check-dco-signoff.sh  repo-governance-check.sh
consent-protocol/scripts/licenses/: verify_apache_surface.py
consent-protocol/scripts/observability/: ga4_growth_dashboard_queries.sql  supabase_data_health.py
consent-protocol/tests/: conftest.py  test_consent_listener_notifications.py  test_db_client_fail_fast.py  test_developer_api_routes.py  test_fcm_messages.py  test_fetchers_provider_priority.py  test_firebase_auth_split.py  test_granular_scopes.py  test_internal_vault_owner_token_validation.py  test_kai_analyze.py  test_kai_auth_matrix.py  test_kai_funding_orchestration_contract.py  test_kai_llm_provider_contract.py  test_kai_market_public_cache.py  test_kai_onboarding_optional.py  test_kai_portfolio_holdings_fallback.py  test_kai_stream_context_gate.py  test_kai_stream_contract.py  test_kai_voice_contract.py  test_kai_voice_rollout_guardrails.py  test_kai_voice_upload_metadata.py  test_mcp_email_uid_resolution.py  test_mcp_scoped_data_tool.py  test_normalize_v2.py  test_pkm_upgrade_routes.py  test_pkm_upgrade_service.py  test_ria_iam_routes.py  test_ria_iam_service_architecture.py  test_ria_verification_intelligence.py  test_scope_helpers_dynamic.py  test_token.py  test_trust.py  test_vault_keys_metadata.py
consent-protocol/tests/quality/: test_architecture_compliance.py  test_kai_route_auth_compliance.py
consent-protocol/tests/services/: test_consent_db_refresh_jobs.py  test_gmail_receipts_service.py  test_market_cache_store.py  test_pkm_agent_lab_service.py  test_plaid_runtime_config.py  (+4 more)
(+1102 files in other folders)
