# pyproject.toml - Python tooling configuration for Hushh Consent Protocol

[project]
name = "hushh-consent-protocol"
version = "1.0.0"
description = "Consent-first backend for Hushh Personal Data Agents"
requires-python = ">=3.13"
license = { text = "MIT" }
readme = "README.md"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.ruff]
# Python 3.13 - aligned with CI and Dockerfile
target-version = "py313"
line-length = 100
exclude = [
    ".git",
    "__pycache__",
    ".pytest_cache",
    "*.egg-info",
]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "B",   # flake8-bugbear
    "I",   # isort
    "S",   # bandit security checks
]
ignore = [
    "E501",  # Line length handled separately
    "B904",  # Prefer explicit exception chaining, but avoid noisy diffs
    "S110",  # Allow try-except-pass for optional fallbacks
    "S608",  # Allow string-based SQL construction (params are properly escaped via SQLAlchemy)
    "B008",  # FastAPI Depends() in argument defaults is intentional
    "S607",  # gcloud/subprocess partial path acceptable for CLI discovery
    "S112",  # try/except/continue without logging acceptable in parsing loops
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]  # Allow assert in tests
"api/routes/*" = ["B008"]  # Redundant with global; FastAPI Depends() pattern
"scripts/*" = ["S106"]  # Test/script fixtures may use placeholder tokens

[tool.ruff.format]
# Enable ruff format for consistent Python formatting
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.mypy]
# Python 3.13 - aligned with CI and Dockerfile
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false  # Gradual typing adoption
ignore_missing_imports = true   # Third-party libs without stubs
files = ["api", "hushh_mcp"]

[[tool.mypy.overrides]]
module = ["hushh_mcp.operons.*", "hushh_mcp.agents.*"]
follow_imports = "skip"

[tool.bandit]
exclude_dirs = ["tests", "__pycache__"]
skips = ["B101"]  # Skip assert warnings

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
asyncio_mode = "auto"  # Enable pytest-asyncio auto mode
asyncio_default_fixture_loop_scope = "function"  # Set event loop scope
